<resources>
    <string name="ads_app_id">ca-app-pub-3219973945608696~7978829548</string>
    <string name="banner_adunit_id">ca-app-pub-3219973945608696/3045356622</string>
    <string name="banner_ad_unit_big">ca-app-pub-3219973945608696/7605803769</string>
    <string name="banner_ad_unit_big_2">ca-app-pub-3219973945608696/7892157499</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3219973945608696/7557702300</string>
    <string name="app_name">TV Show Tracker</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_trending">Trending Shows</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">We cannot process this request now, please try again later.</string>
    <string name="fragment_title_show_summary_info">Detailed Info</string>
    <string name="fragment_title_episodes">Episodes</string>
    <string name="fragment_title_show_cast_info">Cast</string>
    <string name="airs_on">Airs On:</string>
    <string name="scheduled">Scheduled:</string>
    <string name="premiered">Premiered:</string>
    <string name="genres">Genres:</string>
    <string name="status">Status:</string>
    <string name="rating">Rating:</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="episode_detail">Episode Detail</string>
    <string name="episodes">Episodes</string>
    <string name="no_favorite_show">You have no favorite shows. Search for shows from the search bar above and add to your favorite list!</string>
    <string name="are_you_sure_t_remove_from_favorites">Are you sure you want to remove %1$s from favorites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toolbar_title_episode_detail">Episode Detail</string>
    <string name="toolbar_title_show_detail">Show Detail</string>
    <string name="imdb_title_url">http://www.imdb.com/title/</string>
    <string name="no_upcoming_episodes">There seems to be no new episodes in the upcoming week for the shows in your favorites list.</string>

    <string name="channel_name">TvSeriesNotifications</string>
    <string name="channel_description">Notifications for latest news.</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="read_more">Read More</string>

</resources>
